--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,9 @@ footer{
     background-color: #221F1F; 
     color: #FFFFFF;
 }
-.image_accueil{
-    width: 376;
-    height: 475;
+
+img {
+    max-width: 100%;
+    height: auto;
 }
+
