--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,5 @@
 @import "./css/normalize.css";
 @import "./css/style.css";
 @import "./css/variable.css";
+@import "./css/menu.css";
 @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,500;1,500&family=Karma:wght@400;500&family=Kdam+Thmor+Pro&family=Laila:wght@400;500&family=Lato:ital,wght@0,700;1,700&display=swap');
