--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,9 @@
 header{
-    background-color: #AF9E9E;;
+    background-color: #AF9E9E;
 }
 body {
     background-color: #FFF3F3;
+    margin: 4px;
 }
 footer{
     background-color: #221F1F; 
@@ -14,3 +15,6 @@ img {
     height: auto;
 }
 
+a{
+    text-decoration: none;
+}
