--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,3 +8,68 @@ p {
     margin: 0 auto;
     display: block;
 }
+input {
+    background-color: #2d2d2d;
+    width: 100%;
+    border: 0;
+    border-radius: 4px;
+}
+.styled-input {
+    width: 50%;
+    position: relative;
+    border-radius: 4px;
+    margin-left: 24%;
+    min-height: 2em;
+}
+.styled-input label {
+    color: #999;
+    position: absolute;
+    top: 2%;
+    left: 20%;
+    -webkit-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+    pointer-events: none;
+}
+
+.styled-input.wide1 { 
+    max-width: 100%;  
+}
+
+textarea {
+    border: 0;
+    width: 100%;
+    background-color: #2d2d2d;
+    color: white;
+    border-radius: 4px;
+}
+
+textarea {
+    width: 100%;
+    min-height: 15em;
+}
+
+.input-container {
+    width: 650px;
+    max-width: 100%;
+    margin: 20px auto 25px auto;
+}
+
+.submit-btn {
+    padding: 7px 35px;
+    border-radius: 60px;
+    display: inline-block;
+    background-color: #4b8cfb;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
+    margin-left: 28%;
+}
+
+.submit-btn:hover {
+    transform: translateY(1px);
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
+              0 1px 1px 0 rgba(0,0,0,0.09);
+}
+
