--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,13 @@
+h1{
+    font-family: "Lato", sans-serif;
+    font-size: xx-large;
+}
+h3{
+    font-family: "lato", sans-serif;
+}
+h2{
+    font-family: "K2D", sans-serif;
+}
 p {
     margin-bottom: 10px;
     font-family:"Karma", sans-serif;
