ajustation de la police d'écriture

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -93,3 +93,17 @@ textarea {
               0 1px 1px 0 rgba(0,0,0,0.09);
 }
 
+.opserie{
+    width: 49%;
+}
+.opchap{
+    margin-left: 29%;
+    width: 40%;
+}
+.opseries{
+    width: 70%;
+    margin-left: 13%;
+}
+.text-bottom-img{
+    font-size: small;
+}
