--- a/src/css/main.css
+++ b/src/css/main.css
@@ -36,7 +36,6 @@ input {
 }
 .styled-input {
     width: 50%;
-    position: relative;
     border-radius: 4px;
     margin-left: 24%;
     min-height: 2em;
@@ -106,4 +105,7 @@ textarea {
 }
 .text-bottom-img{
     font-size: small;
+}
+.replacetext{
+    margin-left: 24%;
 }
