header-all-finish

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -16,6 +16,10 @@ hr{
     text-align: center;
     margin: 3%;
 }
+.gac1{
+    text-align: center;
+    margin: 2%;
+}
 
 .header_menuBtn {
     position: relative;
