--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,10 +26,16 @@ li{
     margin-left: 5%;
   }
 .ensavoirplusbtn{
-    margin: 0 auto;
-    display: block;
-    border-radius: 7px;
-    background-color: #AAB4D5;
+    padding: 3px 23px;
+    border-radius: 60px;
+    display: inline-block;
+    background-color: lightgray;
+    color: black;
+    cursor: pointer;
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
+    margin-left: 30%;
+    margin-bottom: 4%;
 }
 input {
     background-color: #2d2d2d;
