--- a/src/css/main.css
+++ b/src/css/main.css
@@ -132,3 +132,10 @@ textarea {
 .videoooo{
     width: 100%;
 }
+.coloroth{
+    color:darkblue;
+    line-height: 50px;
+}
+.h2othplace{
+    line-height: 60px;
+}
