--- a/src/css/variable.css
+++ b/src/css/variable.css
@@ -1,3 +1,11 @@
 img {
     border-style: none;
 }
+.imgmargin{
+    width: 300px;
+    margin-left: 35px;
+}
+.imgmargin1{
+    width: 250px;
+    margin-left: 60px;
+}
