--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,10 +15,6 @@
 .logo__texte_ms{
   display: flex;
 }
-.icon_twitch{
-  padding-left: 15px;
-  margin-top: -1%;
-}
 .icon_facebook{
   padding-left: 15px;
 }
@@ -29,16 +25,10 @@
   padding-left: 15px;
   margin-top: 1%;
 }
-.icon_tiktok{
-  padding-left: 4px;
-  margin-top: -2%;
-}
 .icon_youtube{
   padding-left: 15px;
   margin-top: 1.2%;
 }
-
-.logo_mmi {
-  margin-left: 35%;
+.pfooter{
+  color: #000;
 }
-
